tests/fixtures/valid/slot_assign_int.torel
unit fixtures.slot_assign_int;

export proc main() -> Int32 {
    slot answer: Int32 = 40;
    answer = 42;
    return answer;
}
