tests/fixtures/invalid/assign_type_mismatch.torel
unit fixtures.assign_type_mismatch;

export proc main() -> Int32 {
    slot answer: Int32 = 40;
    answer = Exit.ok;
    return answer;
}
